--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
              <p>
              	kakah ni seorang yang baik dan sangat mesra dengan orang stranger tak kira usia. ( janji jangan ignore chat dia sudah, merana korang nanti 😏 )
              </p>
-             <a href="tentang saya.html">
+             <a href="tentang_saya.html">
               Baca Lagi!!!
             </a>
           </div>
